# chat_rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatrag/: csv_meta_loader.py
data/: README.md  movies_title_overview_vote.csv
notebooks/: colbert_retriever_poc.ipynb  new_openai_dev.ipynb  prepare_dataset.ipynb  rag_custom_oai.ipynb  retriever_agent_react_langsmith_poc.ipynb  retriever_agent_react_poc.ipynb  retriever_agent_react_poc_azure.ipynb  retriever_agent_react_poc_gcp.ipynb  retriever_agent_react_sample.ipynb  retriever_agent_react_test.ipynb  retriever_poc.ipynb  structured_chat_step_by_step.ipynb
notebooks/scripts/: retriever.py
src/chatrag/: movie_agent.py  prompts.py  react_agent_chat.py  retriever.py  structured_app.py  structured_chat_app.py  structured_qa_app.py  tools.py
streamlit/structured_chat_app/: Home.py
streamlit/structured_chat_app/.streamlit/: config.toml
streamlit/structured_chat_app/pages/: 1_OpenAI_demo.py  2_Google_VertexAI_demo.py
