[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_rag_csv"
authors = [
    {name = "Aitor Mira Abad", email = "itortouch@gmail.com"},
]
description = "Package implementing structured RAG+LLM use case."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain == 0.0.*",
    "openai >= 0.28.0",
    "chromadb >= 0.4.9",
    "tiktoken >= 0.4.0",
    "lark >= 1.1.7"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pandas >= 2.1.0"
]

[tool.setuptools]
package-dir = {"" = "chat_rag_csv"}

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120